[gd_scene load_steps=64 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://PERSONAGEM/Idle__001.png" type="Texture" id=3]
[ext_resource path="res://run_es/Run__000di.png" type="Texture" id=4]
[ext_resource path="res://run_es/Run__001d.png" type="Texture" id=5]
[ext_resource path="res://run_es/Run__002d.png" type="Texture" id=6]
[ext_resource path="res://run_es/Run__003di.png" type="Texture" id=7]
[ext_resource path="res://run_es/Run__004di.png" type="Texture" id=8]
[ext_resource path="res://run_es/Run__005di.png" type="Texture" id=9]
[ext_resource path="res://run_es/Run__006di.png" type="Texture" id=10]
[ext_resource path="res://run_es/Run__007di.png" type="Texture" id=11]
[ext_resource path="res://run_es/Run__008di.png" type="Texture" id=12]
[ext_resource path="res://run_es/Run__009di.png" type="Texture" id=13]
[ext_resource path="res://jump/Jump__001.png" type="Texture" id=14]
[ext_resource path="res://jump/Jump__002.png" type="Texture" id=15]
[ext_resource path="res://jump/Jump__003.png" type="Texture" id=16]
[ext_resource path="res://jump/Jump__004.png" type="Texture" id=17]
[ext_resource path="res://jump/Jump__005.png" type="Texture" id=18]
[ext_resource path="res://jump/Jump__006.png" type="Texture" id=19]
[ext_resource path="res://jump/Jump__007.png" type="Texture" id=20]
[ext_resource path="res://jump/Jump__008.png" type="Texture" id=21]
[ext_resource path="res://jump/Jump__009.png" type="Texture" id=22]
[ext_resource path="res://PERSONAGEM/run/Run__001.png" type="Texture" id=23]
[ext_resource path="res://PERSONAGEM/run/Run__002.png" type="Texture" id=24]
[ext_resource path="res://PERSONAGEM/run/Run__003.png" type="Texture" id=25]
[ext_resource path="res://PERSONAGEM/run/Run__004.png" type="Texture" id=26]
[ext_resource path="res://PERSONAGEM/run/Run__005.png" type="Texture" id=27]
[ext_resource path="res://PERSONAGEM/run/Run__006.png" type="Texture" id=28]
[ext_resource path="res://PERSONAGEM/run/Run__007.png" type="Texture" id=29]
[ext_resource path="res://PERSONAGEM/run/Run__008.png" type="Texture" id=30]
[ext_resource path="res://PERSONAGEM/run/Run__009.png" type="Texture" id=31]
[ext_resource path="res://Dead__000.png" type="Texture" id=32]
[ext_resource path="res://Dead__001.png" type="Texture" id=33]
[ext_resource path="res://Dead__002.png" type="Texture" id=34]
[ext_resource path="res://Dead__003.png" type="Texture" id=35]
[ext_resource path="res://Dead__004.png" type="Texture" id=36]
[ext_resource path="res://Dead__005.png" type="Texture" id=37]
[ext_resource path="res://Dead__006.png" type="Texture" id=38]
[ext_resource path="res://Dead__007.png" type="Texture" id=39]
[ext_resource path="res://Dead__008.png" type="Texture" id=40]
[ext_resource path="res://Dead__009.png" type="Texture" id=41]
[ext_resource path="res://ParallaxBackgroundJungle.gd" type="Script" id=42]
[ext_resource path="res://plx-1.png" type="Texture" id=43]
[ext_resource path="res://plx-2.png" type="Texture" id=44]
[ext_resource path="res://plx-3.png" type="Texture" id=45]
[ext_resource path="res://plx-4.png" type="Texture" id=46]
[ext_resource path="res://plx-5.png" type="Texture" id=47]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=48]
[ext_resource path="res://floor1.png" type="Texture" id=49]
[ext_resource path="res://COLETOR.gd" type="Script" id=50]
[ext_resource path="res://gold_1.png" type="Texture" id=51]
[ext_resource path="res://coin/Chocolate Bar Demo.otf" type="DynamicFontData" id=52]
[ext_resource path="res://bg_patas.png" type="Texture" id=53]
[ext_resource path="res://PERSONAGEM/pata.png" type="Texture" id=54]
[ext_resource path="res://leoa.tscn" type="PackedScene" id=55]
[ext_resource path="res://PauseScreen.tscn" type="PackedScene" id=56]
[ext_resource path="res://tecla_esc_table.png" type="Texture" id=57]
[ext_resource path="res://fonts/FutilePro.otf" type="DynamicFontData" id=58]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "run",
"speed": 13.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "run_di",
"speed": 20.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "dead",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 64 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 52 )

[sub_resource type="DynamicFont" id=4]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 58 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 58 )

[node name="world" type="Node2D"]
position = Vector2( 10, 3 )
script = ExtResource( 1 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 383.5, 474.8 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="player"]
position = Vector2( 45.5, -54.5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 50, -32 )
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 2 )

[node name="background_jungle" type="Node" parent="."]

[node name="ParallaxBackgroundJungle" type="ParallaxBackground" parent="background_jungle"]
script = ExtResource( 42 )

[node name="sprite_background" type="Sprite" parent="background_jungle/ParallaxBackgroundJungle"]
scale = Vector2( 2.66693, 2.39074 )
texture = ExtResource( 43 )
centered = false
region_rect = Rect2( 0, 0, 1024, 512 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="background_jungle/ParallaxBackgroundJungle"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 1023, 0 )

[node name="sprite_jungle1" type="Sprite" parent="background_jungle/ParallaxBackgroundJungle/ParallaxLayer"]
scale = Vector2( 2.66693, 2.39074 )
texture = ExtResource( 44 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="background_jungle/ParallaxBackgroundJungle"]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 1023, 0 )

[node name="sprite_jungle2" type="Sprite" parent="background_jungle/ParallaxBackgroundJungle/ParallaxLayer2"]
scale = Vector2( 2.66693, 2.39074 )
texture = ExtResource( 45 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="background_jungle/ParallaxBackgroundJungle"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 1023, 0 )

[node name="sprite_jungle2" type="Sprite" parent="background_jungle/ParallaxBackgroundJungle/ParallaxLayer3"]
scale = Vector2( 2.66693, 2.39074 )
texture = ExtResource( 46 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="background_jungle/ParallaxBackgroundJungle"]
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1023, 0 )

[node name="sprite_jungle2" type="Sprite" parent="background_jungle/ParallaxBackgroundJungle/ParallaxLayer4"]
scale = Vector2( 2.66693, 2.39074 )
texture = ExtResource( 47 )
centered = false

[node name="chao" type="ParallaxBackground" parent="."]
script = ExtResource( 48 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="chao"]
motion_offset = Vector2( 100, 0 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="chao/ParallaxLayer"]
position = Vector2( 512, 549 )
scale = Vector2( 1.45, 2 )
texture = ExtResource( 49 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="COLETOR" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 50 )

[node name="gold_1" type="Sprite" parent="CanvasLayer/COLETOR"]
position = Vector2( 74.5829, 54.6812 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 51 )

[node name="coins" type="Label" parent="CanvasLayer/COLETOR"]
margin_left = 105.0
margin_top = 33.5
margin_right = 262.0
margin_bottom = 75.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
text = "9999"
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_patas" type="Sprite" parent="CanvasLayer"]
position = Vector2( 397.447, 33.5 )
scale = Vector2( 1.10749, 1.10749 )
texture = ExtResource( 53 )
centered = false

[node name="pata" type="Node2D" parent="CanvasLayer"]

[node name="pata" type="Sprite" parent="CanvasLayer/pata"]
position = Vector2( 445.323, 71.9469 )
scale = Vector2( 0.105371, 0.0914549 )
texture = ExtResource( 54 )

[node name="pata2" type="Node2D" parent="CanvasLayer"]

[node name="pata2" type="Sprite" parent="CanvasLayer/pata2"]
position = Vector2( 523.279, 71.945 )
scale = Vector2( 0.105371, 0.0914549 )
texture = ExtResource( 54 )

[node name="pata3" type="Node2D" parent="CanvasLayer"]

[node name="pata3" type="Sprite" parent="CanvasLayer/pata3"]
position = Vector2( 599.052, 71.9249 )
scale = Vector2( 0.105371, 0.0914549 )
texture = ExtResource( 54 )

[node name="leoa" parent="." instance=ExtResource( 55 )]
position = Vector2( 127.715, 450.902 )

[node name="musica" type="AudioStreamPlayer2D" parent="."]
volume_db = 12.0
autoplay = true
attenuation = 0.999999

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PauseScreen" parent="CanvasLayer2" instance=ExtResource( 56 )]
visible = false

[node name="bg_tecla_esc" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="bg_tecla_esc"]
position = Vector2( 53.5829, 87.0255 )
scale = Vector2( 0.201846, 0.168854 )
texture = ExtResource( 57 )
centered = false

[node name="Label" type="Label" parent="bg_tecla_esc"]
margin_left = 63.8874
margin_top = 109.57
margin_right = 146.887
margin_bottom = 129.57
custom_fonts/font = SubResource( 4 )
text = "press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="bg_tecla_esc"]
margin_left = 81.8609
margin_top = 139.0
margin_right = 190.861
margin_bottom = 165.0
custom_fonts/font = SubResource( 4 )
text = "to pause"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="bg_tecla_esc"]
margin_left = 146.577
margin_top = 105.601
margin_right = 201.577
margin_bottom = 132.601
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.360784, 0.905882, 0.145098, 1 )
text = "ESC"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="player/Sprite" to="player" method="_on_Sprite_animation_finished"]
